--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_CONNECTIONSTR=mongodb+srv://chongzheng9:zpeslxPEn43THdvU@cluster0.0g4ylvt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_CONNECTIONSTR=mongodb+srv://chongzheng9:OflV8gA7JwClCWDm@cluster0.0g4ylvt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
