--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
-# Backend
-backend/node_modules/
-backend/.env
+# Dependencies
+/node_modules
+/backend/node_modules
+/frontend/node_modules
+/prediction_service/venv
 
-# Frontend
-frontend/node_modules/
-frontend/dist/
-frontend/.env
+# Python
+__pycache__/
+*.pyc
+/prediction_service/model.pkl
+
+# Environment variables
+.env*
+
+# Build artifacts
+/frontend/dist
 
 # OS + IDE defaults
 .DS_Store
-*.log
+*.log*
