--- a/.github/workflows/google-cloud-deploy.yml
+++ b/.github/workflows/google-cloud-deploy.yml
@@ -50,6 +50,8 @@ jobs:
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/dbs-studio-repo/budget-service:${{ github.sha }}
           platform: 'managed'
           allow_unauthenticated: true # Set to false to restrict access
+          secrets: |
+            MONGO_URI=projects/${{ env.GCP_PROJECT_ID }}/secrets/MONGO_URI:latest
 
       # --- DEPLOY BACKEND SERVICE ---
       - name: Build and Push Docker Image for backend_service
@@ -67,6 +69,8 @@ jobs:
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/dbs-studio-repo/backend-service:${{ github.sha }}
           platform: 'managed'
           allow_unauthenticated: true # Set to false to restrict access
+          secrets: |
+            MONGODB_CONNECTIONSTR=projects/${{ env.GCP_PROJECT_ID }}/secrets/MONGODB_CONNECTIONSTR:latest
 
       # --- DEPLOY PREDICTION SERVICE ---
       - name: Build and Push Docker Image for prediction_service
