--- a/.github/workflows/google-cloud-deploy.yml
+++ b/.github/workflows/google-cloud-deploy.yml
@@ -34,6 +34,12 @@ jobs:
           # and add the JSON key as a secret named GCP_SA_KEY in your GitHub repository settings
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev
+
       # --- DEPLOY BUDGET SERVICE ---
       - name: Build and Push Docker Image for budget_service
         uses: docker/build-push-action@v5
