--- a/.github/workflows/google-cloud-deploy.yml
+++ b/.github/workflows/google-cloud-deploy.yml
@@ -56,7 +56,7 @@ jobs:
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/dbs-studio-repo/budget-service:${{ github.sha }}
           platform: 'managed'
           allow_unauthenticated: true # Set to false to restrict access
-          env_vars: MONGO_URI=secret:MONGO_URI:latest
+          set-env-vars: MONGO_URI=secret:MONGO_URI:latest
 
       # --- DEPLOY BACKEND SERVICE ---
       - name: Build and Push Docker Image for backend_service
@@ -74,7 +74,7 @@ jobs:
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/dbs-studio-repo/backend-service:${{ github.sha }}
           platform: 'managed'
           allow_unauthenticated: true # Set to false to restrict access
-          env_vars: MONGODB_CONNECTIONSTR=secret:MONGODB_CONNECTIONSTR:latest
+          set-env-vars: MONGODB_CONNECTIONSTR=secret:MONGODB_CONNECTIONSTR:latest
 
       # --- DEPLOY PREDICTION SERVICE ---
       - name: Build and Push Docker Image for prediction_service
