--- a/prediction_service/Dockerfile
+++ b/prediction_service/Dockerfile
@@ -20,4 +20,4 @@ EXPOSE 8080
 ENV PORT 8080
 
 # Run app.py when the container launches
-CMD ["gunicorn", "--bind", ":$PORT", "--workers", "1", "--threads", "8", "app:app"]
+CMD gunicorn --bind :$PORT --workers 1 --threads 8 app:app
