--- a/.github/workflows/google-cloud-deploy.yml
+++ b/.github/workflows/google-cloud-deploy.yml
@@ -96,17 +96,14 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Create Environment File for Production
-        run: |
-          echo "VITE_API_URL=http://34.128.166.86" >> .env.production
-          echo "VITE_BUDGET_URL=http://34.128.166.86" >> .env.production
-        working-directory: ./frontend
-
       - name: Install and Build Frontend
         run: |
           npm install
           npm run build
         working-directory: ./frontend
+        env:
+          VITE_API_URL: http://34.128.166.86
+          VITE_BUDGET_URL: http://34.128.166.86
 
       - name: Deploy Frontend to Google Cloud Storage
         uses: google-github-actions/upload-cloud-storage@v2
